update list of items in README

--- a/README.Rmd
+++ b/README.Rmd
@@ -1,14 +1,8 @@
 git init . folder
-# Comment
-# Arithmetic
-# Variables
-# Data Types
-# Data Types class() function
-# Vector
-# names() function
-# calculation
-# Comparison
-# Selection
-# Selection by Range
-# Selection by Range with Calculation
-# Selection Vector by Comparison
+1. Introduction to R
+• Basic about R
+• Vectors
+• Matrices
+• Factors
+• Data frames
+• Lists
